               INTERMediatorLog.errorMessageByAlert
               INTERMediatorLog.errorMessageOnAlert
- IMLibFormat object is added, and it's a devided portion of INTERMediatorLib object.
  INTER-Mediator-Format.js file contains IMLibFormat object.
- All functions have 'use strict';.
- Update deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine and CI.
- [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
- [BUG FIX] Replace the dataset property to set/get attribute methods for IE10.
- [BUG FIX] Justify the next line handling in TEXTAREA tagged element for IE9.
- [BUG FIX] Fix to disappear text and button name in the tag with data-im="_@update:..." or "_@addorder:...".
- [BUG FIX] The Auth_Manager sample in Auth_Support folder didn't work. So the UserList.php is removed.
- [BUG FIX] Master/Detail interface in mobile phone didn't return the master page from the detail page.
- [BUG FIX] Record create method under authentication prevented the 'target' setting, and it is fiexed.
- [BUG FIX] Sometimes validation wasn't work, for example, blank text field.
- [BUG FIX] The master-hide/detail contexts didn't hide the pagenation on showed the detail.
- [BUG FIX] The stringfy method for object (INTERMediatorLib.objectToString) returned 'undefined' instead of quotes.
- [BUG FIX] The method to convert number from string (INTERMediatorLib.normalizeNumerics) returned wrong result.
- [BUG FIX] IMLibLocalContext.bindingDescendant() didn't detect nodes that generated after page construct.
- [BUG FIX] jQuery-File-Upload plug-in was improved in case of multiple rows presentation.
- [BUG FIX] DefinitionChecker did not work fine in extended error range for new PHP version.

Ver.5.6.1 (September 16, 2017)
- Fix loading the page of the Practice "search (using JavaScript)".

Ver.5.6 (June 23, 2017)
- Well-designed CSS files as the 'default' theme are added by Hiroko Oki. She is web designer and a lecturer of