@@ -33,7 +33,7 @@ var Parser = (function (scope) {
     var TFUNCALL = 4;
 
     Parser.regFirstVarChar = new RegExp('[\u00A0-\u1FFF\u2C00-\uDFFFa-zA-Z@_]');
-    Parser.regRestVarChar = new RegExp('[\u00A0-\u1FFF\u2C00-\uDFFFa-zA-Z@_0-9]');
+    Parser.regRestVarChar = new RegExp('[\u00A0-\u1FFF\u2C00-\uDFFFa-zA-Z@_:0-9]');
 
     function Token(type_, index_, prio_, number_) {
         this.type_ = type_;
